--- a/Airbnb/package.json
+++ b/Airbnb/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.19",
     "css": "^3.0.0",
     "postcss": "^8.4.38",
