--- a/Tenzies/package.json
+++ b/Tenzies/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "confetti": "^2.0.3",
     "nanoid": "^5.0.7",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.3"
   },
